--- a/CheckRaytracingFeatures.vcxproj.filters
+++ b/CheckRaytracingFeatures.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CheckRaytracingFeatures.cpp">
+    <ClCompile Include="src\CheckRaytracingFeatures.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\CheckRaytracingFeatures.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
